[package]
name = "libbpf-sys"
version = "1.2.1+v1.2.0"
description = "Rust bindings to libbpf from the Linux kernel"
readme = "README.md"
repository = "https://github.com/libbpf/libbpf-sys"
homepage = "https://github.com/libbpf/libbpf-sys"
keywords = ["bpf", "ebpf", "xdp"]
authors = [
	"Alex Forster <alex@alexforster.com>",
	"Dan Siemon <dan@coverfire.com>",
	"Daniel Xu <dxu@dxuuu.xyz>",
]
license = "BSD-2-Clause"
edition = "2018"
build = "build.rs"
links = "libbpf"
exclude = [
	"/elfutils/tests/*.bz2",
	"/libbpf/assets",
	"/zlib/contrib",
]

[badges]
github = { repository = "libbpf/libbpf-sys" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
bindgen = { version = "^0.66", optional = true }
cc = "^1.0.79"
pkg-config = "^0.3.27"
nix = { version = "^0.27.0", default-features = false, features = ["fs"] }
num_cpus = "^1.16.0"

[lib]
crate-type = ["lib", "staticlib"]

[features]
novendor = []
static = []
vendored = ["static"]
